v1.3.1 (02/03/2016)
- Fix the Fix for files without duration (#64) (thanks kaigame)

v1.3.0 (01/03/2016)
- Fix for files without duration (#64)
- Search is once again avaible (#68)
- Fully tested with Jarvice (Final build) (#66)

v1.2.9 (14/02/2016)
- workaround for slow connection like Android on WiFi trying to watch big H264@1080p

v1.2.8 (14/02/2016)
- nakamoriPlayer has been deprecated
- compatible with Kodi v16 (Jarvis) (#63)
- official Kodi Remote App for iOS work with Nakamori (#34)

v1.2.7 (13/02/2016)
- fixed 'FutureWarning'
- fixed 'XFILE::CDirectory::GetDirectory' (#63)

v1.2.6 (03/02/2016)
- Compatible with JMM Server v3.4.6.4
- New Icon (#8)
- Added '-continue-' item to move cursor on next not watched episode (#52)
- Little change in Settings

v1.2.5 (18/01/2016)
- Added support for few skins that use fanart as cover (ex. Mimic) (#59)
- Added more fanart support in default skin
- 'Unsort' now populate correctly (#58)

v1.2.4 (16/01/2016)
- Language selection readded (#55 and #56)
- Adding support for Voting per Episode (#57)
- Adding setting for making vote per watched episode

v1.2.3 (11/01/2016)
- Added Jumpy support (PMS/UMS)
- Support nested Groups (#43)
- Fixing all 'FutureWarning' Errors

v1.2.2 (28/12/2015)
- Fixed watch status not working
- When entering Series the unwatched episodes are selected (request from user)

v1.2.1 (23/12/2015)
- Timeout fix, it was once again hardcoded to 60sec, which is bad
- 'Sync Watched status' is now working
- Optimalization to server side for character list

v1.2.0 (22/12/2015)
- Removing deprecated code (http://forum.kodi.tv/showthread.php?tid=250936)
- Adding support for displaying the title the way you like (#14) with ability to skip official name

v1.1.9 (13/12/2015)
- Added setting for 'Notification windows' about watched status changed and fixed (#42)
- Added setting for percent of watched episode to mark as watched (#41)
- Few settings were move around

v1.1.8 (10/12/2015)