@@ -14,6 +14,7 @@
 	<category label="32023">
 		<setting label="32025" type="bool" id="watchedbox" default="true"/>
 		<setting label="32024" type="number" id="watched_mark" default="80"/>
+        <setting label="32039" type="bool" id="show_continue" default="true"/>
 		<setting label="32007" type="lsep"/>
 		<setting label="32005" type="bool" id="syncwatched" default="true"/>
 		<setting label="32026" type="lsep"/>
